Add initial database migrations and configure Entity Framework Core with identity tables

--- a/CodingChallenge/CodingChallenge.csproj
+++ b/CodingChallenge/CodingChallenge.csproj
@@ -19,4 +19,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Scripts\Script0001.sql" />
+      <EmbeddedResource Include="Scripts\Script0001.sql" />
+    </ItemGroup>
+
 </Project>
