--- a/CodingChallenge/appsettings.Development.json
+++ b/CodingChallenge/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FlightRoutingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Key": "your-32-character-secret-key-here-1234567890",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
