--- a/CodingChallenge/appsettings.Development.json
+++ b/CodingChallenge/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FlightRoutingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-9VBIN3P\\SQLEXPRESS;Database=FlightRoutingDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Jwt": {
     "Key": "your-32-character-secret-key-here-1234567890",
