Add `Flight`, `Journey`, `Route`, and `JourneyFlight` entities with related migrations and update SQL script

--- a/CodingChallenge/CodingChallenge.csproj
+++ b/CodingChallenge/CodingChallenge.csproj
@@ -24,6 +24,8 @@
     <ItemGroup>
       <None Remove="Scripts\Script0001.sql" />
       <EmbeddedResource Include="Scripts\Script0001.sql" />
+      <None Remove="Scripts\Script0002.sql" />
+      <EmbeddedResource Include="Scripts\Script0002.sql" />
     </ItemGroup>
 
 </Project>
